--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
-<div id="root" style="font-family: Montserrat, sans-serif; min-height: 100vh; display: flex; flex-direction: column; min-width: 960px"></div>
+<div id="root" style="font-family: Montserrat, sans-serif; min-height: 100vh; display: flex; flex-direction: column;"></div>
 <script type="module" src="/src/index.tsx"></script>
 <!--
   This HTML file is a template.
